syntax = "proto3";

package protocol.entity;
import "msg/message.proto";

// ======================================
// 👤 用户消息结构（单聊消息）
// ======================================
message UserMsgEntity {
  uint64 message_id = 1;                        // 当前消息唯一 ID
  string from = 2;                              // 发送者用户ID
  string to = 3;                                // 接收者用户ID
  repeated message.Segment content = 4;         // 消息内容
  int64 read_time = 5;                          // 阅读时间
  bool revoked = 6;                             // 是否撤回
  bool is_system = 7;                           // 是否系统消息
  bool sync_mq_status = 8;                     // 是否同步到 MQ
  bool delivered = 9;                          // 是否送达
  int64 created_time = 99;                       // 创建时间
  int64 updated_time = 100;                       // 最后更新时间
}

// ======================================
// 👥 群组消息结构（群聊消息）
// ======================================
message GroupMsgEntity {
  uint64 message_id = 1;                        // 消息唯一 ID
  string from = 2;                              // 发送者用户ID
  string to = 3;                                // 群组ID
  repeated message.Segment content = 4;         // 消息内容
  int64 seq = 5;                                // 群内消息序号
  bool revoked = 6;                             // 是否撤回
  bool is_system = 7;                           // 是否系统消息
  bool sync_mq_status = 8;                     // 是否同步到 MQ

  int64 create_time = 99;                        // 创建时间
  int64 update_time = 100;                        // 更新时间
}


